[workspace]
members = ["crates/protocol", "crates/server"]
resolver = "3"

[workspace.dependencies]
goosekv-protocol = { path = "crates/protocol" }
glommio = { version = "0.9.0" }
bytes = { version = "1.10.1" }
thiserror = { version = "2.0.16" }
futures = { version = "0.3.31" }
anyhow = { version = "1.0.100" }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.20" }
async-channel = { version = "2.5.0" }
