[package]
name = "goosekv-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
goosekv-protocol.workspace = true
glommio.workspace = true
thiserror.workspace = true
futures.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bytes.workspace = true
async-channel.workspace = true

